QA: made as much sensible changes as possible after a     FindBugs run.
git-svn-id: https://svn.codehaus.org/izpack/izpack-src/trunk@850 7d736ef5-cfd4-0310-9c9a-b52d5c14b761